src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ReadOnlyPropertyInSetter.xaml
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <DockPanel.Resources>
        <Style TargetType="{x:Type Button}">
            <Style.Triggers>
                <Trigger Property="IsMouseOver" Value="true">
                    <Trigger.Setters>
                        <Setter Property="ActualWidth" Value="500.0" />
                    </Trigger.Setters>
                </Trigger>
            </Style.Triggers>
        </Style>
    </DockPanel.Resources>

    <Button Content="Foo" />
</DockPanel>
